trying to fix frame drop animation on mobile view after vercel deployment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,9 +70,7 @@ body {
   background-clip: text;
 }
 
-.will-change-transform {
-  will-change: transform;
-}
+
 
 @keyframes blob {
   0% {
